updated landing page. Partially fixed dark mode

--- a/front-end/src/index.css
+++ b/front-end/src/index.css
@@ -3,65 +3,63 @@
 @tailwind utilities;
 
 @layer base {
-  @layer base {
     :root {
-      --background: #ffffff;
-      --foreground: #09090b;
-      --card: #ffffff;
-      --card-foreground: #09090b;
-      --popover: #ffffff;
-      --popover-foreground: #09090b;
-      --primary: #0d9488;
-      --primary-foreground: #fff1f2;
-      --secondary: #f4f4f5;
-      --secondary-foreground: #18181b;
-      --muted: #f4f4f5;
-      --muted-foreground: #71717a;
-      --accent: #f4f4f5;
-      --accent-foreground: #18181b;
-      --destructive: #ef4444;
-      --destructive-foreground: #fafafa;
-      --border: #e4e4e7;
-      --input: #e4e4e7;
-      --ring: #0d9488;
-      --radius: 0.75rem;
+        --background: 175 61% 98%;
+        --foreground: 175 73% 0%;
+        --muted: 175 19% 86%;
+        --muted-foreground: 175 5% 37%;
+        --popover: 175 61% 98%;
+        --popover-foreground: 175 73% 0%;
+        --card: 175 61% 98%;
+        --card-foreground: 175 73% 0%;
+        --border: 175 13% 88%;
+        --input: 175 13% 88%;
+        --primary: 175 84% 32%;
+        --primary-foreground: 0 0% 100%;
+        --secondary: 175 10% 84%;
+        --secondary-foreground: 175 10% 24%;
+        --accent: 175 10% 84%;
+        --accent-foreground: 175 10% 24%;
+        --destructive: 21 82% 45%;
+        --destructive-foreground: 0 0% 100%;
+        --ring: 175 84% 32%;
+        --radius: 0.5rem;
     }
 
     .dark {
-      --background: #0c0a09;
-      --foreground: #f2f2f2;
-      --card: #1c1917;
-      --card-foreground: #f2f2f2;
-      --popover: #171717;
-      --popover-foreground: #f2f2f2;
-      --primary: #14b8a6;
-      --primary-foreground: #052e16;
-      --secondary: #27272a;
-      --secondary-foreground: #fafafa;
-      --muted: #262626;
-      --muted-foreground: #a1a1aa;
-      --accent: #292524;
-      --accent-foreground: #fafafa;
-      --destructive: #7f1d1d;
-      --destructive-foreground: #fef2f2;
-      --border: #27272a;
-      --input: #27272a;
-      --ring: #14b8a6;
+        --background: 180 20% 7.84%;
+        --foreground: 175 38% 98%;
+        --muted: 175 19% 14%;
+        --muted-foreground: 175 5% 63%;
+        --popover: 180 25% 6.27%;
+        --popover-foreground: 175 38% 98%;
+        --card: 180 25% 6.27%;
+        --card-foreground: 175 38% 98%;
+        --border: 175 13% 14%;
+        --input: 175 13% 14%;
+        --primary: 175.34 77.44% 26.08%;
+        --primary-foreground: 0 0% 100%;
+        --secondary: 178.6 84.31% 10%;
+        --secondary-foreground: 175 19% 68%;
+        --accent: 175 19% 8%;
+        --accent-foreground: 175 19% 68%;
+        --destructive: 21 82% 49%;
+        --destructive-foreground: 0 0% 100%;
+        --ring: 175 84% 32%;
     }
-  }
 }
 
 @layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
-  }
+    * {
+        @apply border-border;
+    }
+    body {
+        @apply bg-background text-foreground;
+    }
 }
 
 html,
 body,
 #root {
-  height: 100%;
+    height: 100%;
 }
